Add permissions section to workflow configuration

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,9 @@ on:
       - "environment.yml"     # Only run when this file changes
   workflow_dispatch:          # Optional: allow manual trigger
 
+permissions:
+  contents: write
+
 jobs:
   update_lock_file:
     runs-on: ubuntu-latest
