Update docker-compose.yml for correct workflow

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,17 @@
 services:
-  dockerlock:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: dockerlock
-    container_name: dockerlock
+  project-env:
+    image: dvorster/term-deposit-classifier:latest
     ports:
-      - "8888:8887"
+      - "8888:8888"
     volumes:
-      - ./:/workspace
-    working_dir: /workspace
-    stdin_open: true
-    tty: true
+      - .:/home/jovyan/work
+    # Set the entrypoint to run JupyterLab
+    entrypoint:
+      [
+        "tini",
+        "-g",
+        "--",
+        "start-notebook.sh",
+        "--ServerApp.token='password'",
+        "--ip=127.0.0.1",
+      ]
